--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,10 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.py]
+indent_style = space
+indent_size = 4
+
 [*.md]
-trim_trailing_whitespace = false
+indent_style = space
+trim_trailing_whitespace = true
