--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "build-legacy-js": "./node_modules/.bin/babel --presets=@babel/env"
   },
   "babel": {
-     "presets": [
-       ["@babel/preset-env"]
-     ]
+    "presets": [
+      [
+        "@babel/preset-env"
+      ]
+    ]
   },
   "browserslist": [
     "since 2014",
