--- a/deploy-tools/vhost.conf.sample
+++ b/deploy-tools/vhost.conf.sample
@@ -35,6 +35,7 @@
 		ExpiresByType image/gif A31536000
 		ExpiresByType image/jpeg A31536000
 		ExpiresByType image/png A31536000
+		ExpiresByType image/svg+xml A31536000
 		ExpiresByType text/css A31536000
 
 		# 6 months
@@ -47,7 +48,7 @@
 		<IfModule mod_filter.c>
 			# "application/json" compression is not enabled by default. Since adding a filter here completely overrides
 			# the default configuration, we list all desired types explicitly.
-			AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css
+			AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css image/svg+xml
 			AddOutputFilterByType DEFLATE application/x-javascript application/javascript application/ecmascript application/json
 		</IfModule>
 	</IfModule>
