--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "csslint": "^1.0.5",
-    "eslint": "^7.16.0"
+    "eslint": "^8.5.0",
+    "terser": "^5.10.0"
   },
   "dependencies": {}
 }
