removed package-lock.json as node_modules are not used in production, so the exact setup does not need to be preserved. Also reduces the amount of things that need to be kept up-to-date

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 *.sublime-project
 *.sublime-workspace
 *.zip
@@ -7,6 +8,11 @@ src/py/static/*
 *.html.py
 *.sqlite3
 *.mo
+
+# node_modules are not used in production, so there is no need to preserve the exact setup
+package-lock.json
 node_modules
+
 db/*
 **/migrations/*.py
+
